2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/SimpleEditMode.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/DefaultEditActions.cs:
	* Mono.TextEditor/UnicodePreviewEditMode.cs: Worked on unicode
	  preview (but disabled it).

2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed text editor line
	  marker bug.

2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Changed GetPixel method.

2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Style.cs: Changed color styles
	  a bit.

2008-02-13  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor/ISearchEngine.cs: Fix crash on empty search.

2009-02-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Handle system style changes.

2009-02-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed drawing issue with
	  current line marker in color styles & syntax modes that
	  define the same bg color than the default one for keywords.

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs: Dispose Gdk cursors, else
	  finalisers destroy them outside of the GUI thread and often
	  crash MD due to X asserts resulting in _XCBUnlockDisplay
	  errors.

2009-02-12  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Worked on
	  ColumnToVisualX.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed "Bug 474600 -
	  Completion window's trigger position is wrong at start and
	  end of line".

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/IconMargin.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs: LineSegment.Markers is