@@ -124,7 +124,6 @@
     <Compile Include="Mono.TextEditor\LinkEventArgs.cs" />
     <Compile Include="Mono.TextEditor\SearchRequest.cs" />
     <Compile Include="Mono.TextEditor\ITextEditorOptions.cs" />
-    <Compile Include="Mono.TextEditor\UnicodePreviewEditMode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ChangeLog" />
