@@ -293,11 +293,6 @@ namespace Mono.TextEditor
 		{
 			data.Document.Redo ();
 		}
-
-		public static void SwitchToUnicodeInputMode (TextEditorData data)
-		{
-			new UnicodePreviewEditMode ().AttachUnicodeEditMode (data);
-		}
 	}
 	
 }
